snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
a1bf0b57556c0a0382178a4eae9dce00